[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["Xavier Schiller <22575255+XavierSchiller@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
